--- a/source/_posts/notes/3.md
+++ b/source/_posts/notes/3.md
@@ -1,5 +1,5 @@
 ---
-title: 笔记-Docker
+title: 笔记-Docker容器运行
 date: 2020-02-27 13:20:32
 tags:
     - docker
@@ -25,108 +25,69 @@ mp3: http://music.163.com/song/media/outer/url?id=468176711.mp3
 }
 ```
 ### 运行MySQL数据库
+- 拉取mysql5.7的镜像
 ``` bash
-$ sudo docker run -itd --name mysql \
--v $PWD/data:/var/lib/mysql \
--p 13306:3306 --restart=always \
--e MYSQL_ROOT_PASSWORD=123456 mysql:5.7
+$ sudo docker pull mysql:5.7
+```
+- 运行一个mysql5.7镜像的容器
+``` bash
+$ sudo docker run -itd \
+--name=mysql \
+-v $PWD/MySQL/data:/var/lib/mysql \
+-v $PWD/MySQL/config/my.cnf:/etc/mysql/my.cnf \
+-p 13306:3306 \
+--restart=always \
+--privileged=true \
+-e MYSQL_ROOT_PASSWORD=123456 \
+mysql:5.7
 ```
 \-d：后台运行  
 \-v：挂载到磁盘，数据持久化  
 \-p：端口映射，docker容器的`3306`端口映射到宿主机的`13306`端口  
 \-e：添加变量，使用123456作为MySQL中root用户的密码  
 \-\-name：docker容器命名  
-\-\-restart: 容器是否跟随docker一同启动，always同时启动。
+\-\-restart: 容器是否跟随docker一同启动，always同时启动。  
+\-\-privileged：赋予容器root用户真正的root权限  
+- 进入mysql容器的命令：
+``` bash
+$ sudo docker exec -it mysql bash
+```
 ### 运行Redis数据库  
+- 拉取redis5的镜像
 ``` bash
-$ sudo docker run -itd -p 16379:6379 \
--v $PWD/data:/data --restart=always \
---name redis redis:5 redis-server \
---appendonly yes --requirepass "123456"
+$ sudo docker pull redis:5-alpine
 ```
-\-\-appendonly yes：开启Redis的AOF模式  
-\-\-requirepass：设置Redis的密码  
-进入Linux容器的命令：
+- 从GitHub上获取对应版本的redis配置文件   
+reids的GitHub地址：<https://github.com/antirez/redis>  
+将文件放到指定位置。($PWD/Redis/conf/redis.conf)，修改配置文件的配置。
+- 运行一个redis5镜像的容器
 ``` bash
-$ sudo docker exec -it redis bash
+$ sudo docker run -itd \
+-p 16379:6379 \
+-v $PWD/Redis/data:/data \
+-v $PWD/Redis/conf/redis.conf:/etc/redis/redis.conf \
+--restart=always \
+--privileged=true \
+--name=redis \
+redis:5-alpine \
+redis-server /etc/redis/redis.conf
 ```
-### 运行node容器为hexo博客
+- 进入redis容器的命令：
+``` bash
+$ sudo docker exec -it redis sh
+```
+### 运行node容器
+- 拉取node12的镜像
+``` bash
+$ sudo docker pull node:12-alpine
+```
+- 运行一个node12镜像的容器
 ``` bash
 $ sudo docker run -itd -p 14000:4000 \
 -v $PWD/hexo:/root --restart=always \
 --name node node:12-alpine
 ```
-进入alpine容器的命令：
+- 进入alpine容器的命令：
 ``` bash
 $ sudo docker exec -it node sh
-```
-### 在docker的node容器中搭建hexo博客——简单记载
-1. 进入node-alpine容器，修改apk命令的数据源：  
-a. 打开`/etc/apk/repositories`  
-b. 将里面的`dl-cdn.alpinelinux.org`改成`mirrors.aliyun.com`，保存退出即可  
-c. 执行：`apk update`  
-2. 安装git、openssh-client、hexo-cli：
-``` bash
-$ apk add git
-$ apk add openssh-client
-$ npm install -g hexo-cli
-```
-npm淘宝源：`--registry=https://registry.npm.taobao.org`  
-3. 创建博客所在的文件，进入文件中，执行初始化命令：
-``` bash
-$ hexo init
-# 如果初始没有彻底成功，在npm下载插件的时候报错执行下面命令:
-$ npm install
-```
-4. 去GitHub找自己喜欢的hexo主题
-5. 连接到GitHub  
-a. 设置git的用户和邮箱  
-``` bash
-$ git config --global user.name "your name"
-$ git config --global user.email "your@email.com"
-```
-b. 生成密钥
-``` bash
-$ ssh-keygen -t rsa -C your@email.com
-```
-c. 将`~/.ssh/`目录下的`id_rsa.pub`文件内容复制到GitHub上，并测试。
-``` bash
-$ ssh -T git@gitnub.com
-```
-当返回 "`Hi your name！you've successfully authenticated ...`"，表示你已经连接GitHub成功。
-6. hexo上传到GitHub的插件——`hexo-deployer-git`  
-修改博客根目录下的`_config.yml`文件  
-``` yml
-deploy:
-  type: git
-  repo: git@github.com:mrgaodi/mrgaodi.github.io.git
-  branch: master
-```
-使用 `hexo g` && `hexo d` 进行提交  
-7. 博客备份  
-a. 从GitHub上把自己的仓库拉下来，进入拉取的文件夹内，将除`.git`和`.gitignore`外的文件全部清空，把本地博客文件夹下的内容copy的仓库文件夹中，编写`.gitignore`文件，选择哪些文件不上传到GitHub。  
-b. git创建一个新分支
-``` bash
-# 新建本地分支
-$ git branch hexo
-# 切换到新分支
-$ git checkout hexo
-# 将本地分支推送到GitHub上
-$ git push origin hexo
-# 提交代码到GitHub上
-$ git add .
-$ git commit -m '提交的笔记'
-$ git push origin hexo
-```
-附：我的`.gitinore`内容
-``` vim
-.DS_Store
-Thumbs.db
-db.json
-*.log
-node_modules/
-public/
-.deploy*/
-package-lock.json
-yarn.lock
 ```
