--- a/source/_posts/notes/3.md
+++ b/source/_posts/notes/3.md
@@ -29,6 +29,7 @@ mp3: http://music.163.com/song/media/outer/url?id=468176711.mp3
 ``` bash
 $ sudo docker pull mysql:5.7
 ```
+mysql5.7的配置文件：[my.cnf](https://cdn.jsdelivr.net/gh/mrgaodi/CDN/file/my.cnf)  
 - 运行一个mysql5.7镜像的容器
 ``` bash
 $ sudo docker run -itd \
@@ -58,7 +59,7 @@ $ sudo docker exec -it mysql bash
 $ sudo docker pull redis:5-alpine
 ```
 - 从GitHub上获取对应版本的redis配置文件   
-reids的GitHub地址：<https://github.com/antirez/redis>  
+reids的GitHub地址：<https://github.com/antirez/redis>
 将文件放到指定位置。($PWD/Redis/conf/redis.conf)，修改配置文件的配置。
 - 运行一个redis5镜像的容器
 ``` bash
