修改note2、note3、note4

--- a/source/_posts/notes/2.md
+++ b/source/_posts/notes/2.md
@@ -73,8 +73,10 @@ $ source /etc/profile
 ```  
 注册服务并建立软链接  
 ``` bash
-$ update-alternatives --install /usr/bin/java java /usr/lib/jdk/jdk1.8.0_161/bin/java 300
-$ update-alternatives --install /usr/bin/javac javac /usr/lib/jdk/jdk1.8.0_161/bin/javac 300
+$ update-alternatives --install /usr/bin/java \
+java /usr/lib/jdk/jdk1.8.0_161/bin/java 300
+$ update-alternatives --install /usr/bin/javac \
+javac /usr/lib/jdk/jdk1.8.0_161/bin/javac 300
 ```  
 查看安装是否成功：  
 ``` bash
