--- a/source/_posts/notes/3.md
+++ b/source/_posts/notes/3.md
@@ -92,3 +92,37 @@ $ sudo docker run -itd -p 14000:4000 \
 ``` bash
 $ sudo docker exec -it node sh
 ```
+### 运行flink容器
+- 拉取flink的镜像
+``` bash
+$ sudo docker pull flink:1.9.3-scala_2.11
+```
+- flink的配置文件  
+[flink-conf.yaml](https://cdn.jsdelivr.net/gh/mrgaodi/CDN/file/flink-conf.yaml)
+- 创建docker的桥接网络
+``` bash
+$ sudo docker network create flink-net -d bridge
+```
+- 运行flink容器（jobmanager）
+``` bash
+$ sudo docker run -itd --name=flink-jmr \
+-p 18081:8081 \
+-e JOB_MANAGER_RPC_ADDRESS=flink-jmr \
+--network=flink-net \
+-v $PWD/jmr/flink-conf.yaml:/opt/flink/conf/flink-conf.yaml \
+flink:1.9.3-scala_2.11 jobmanager
+```
+- 运行flink容器（taskmanager）
+``` bash
+$ sudo docker run -itd --name=flink-tmr01 \
+-e JOB_MANAGER_RPC_ADDRESS=flink-jmr \
+--network=flink-net \
+-v $PWD/tmr01/flink-conf.yaml:/opt/flink/conf/flink-conf.yaml \
+flink:1.9.3-scala_2.11 taskmanager
+```
+\-\-network：容器所在网络，互相间可以通过名称进行访问。  
+\-\-JOB_MANAGER_RPC_ADDRESS：jobmanager服务的地址
+- 进入flink容器的命令：
+``` bash
+$ sudo docker exec -it flink-jmr bash
+```
