--- a/source/_posts/notes/4.md
+++ b/source/_posts/notes/4.md
@@ -9,7 +9,7 @@ cover: https://cdn.jsdelivr.net/gh/mrgaodi/CDN/img/img-004.jpg
 mp3: http://music.163.com/song/media/outer/url?id=468176711.mp3
 ---
 ### 运行docker的node容器
-[笔记-Docker](../3)
+[笔记-Docker容器运行](../3)
 ### 在docker的node容器中搭建hexo博客——简单记载
 1. 进入node-alpine容器，修改apk命令的数据源：  
 a. 打开`/etc/apk/repositories`  
