--- a/source/_posts/notes/4.md
+++ b/source/_posts/notes/4.md
@@ -41,7 +41,7 @@ $ ssh-keygen -t rsa -C your@email.com
 ```
 c. 将`~/.ssh/`目录下的`id_rsa.pub`文件内容复制到GitHub上，并测试。
 ``` bash
-$ ssh -T git@gitnub.com
+$ ssh -T git@github.com
 ```
 当返回 "`Hi your name！you've successfully authenticated ...`"，表示你已经连接GitHub成功。
 6. hexo上传到GitHub的插件——`hexo-deployer-git`  
